[package]
name = "alumina"
version = "0.3.0"
authors = ["J. Millard <millard.jn@gmail.com>"]
description = "An Experimental Deep Learning Library"
repository = "https://github.com/millardjn/alumina"
edition = "2021"

[workspace]

members = [
	
	"alumina_core",
	"alumina_ops",
	"alumina_data",
	"alumina_opt",
	
	"alumina_test",
	
	"alumina_image_data",
]

[dependencies]
alumina_core = { path = "./alumina_core", version = "0.3" }
alumina_ops = { path = "./alumina_ops", version = "0.3" }
alumina_data = { path = "./alumina_data", version = "0.3" }
alumina_opt = { path = "./alumina_opt", version = "0.3" }
alumina_test = { path = "./alumina_test", version = "0.3" }
alumina_image_data = { path = "./alumina_image_data", version = "0.3" }


failure = "0.1"
indexmap = {version = "1", features = ["rayon", "serde-1"]}
ndarray = { version = "0.15", features = ["rayon", "serde-1"] }

rand = "0.8"
rand_distr = "0.4"
smallvec = "1.4"
itertools = "0.10"
lru = "0.7"
rayon = "1.5"
num-traits = "0.2"
byteorder = "1.3"
typenum = "1.12"
matrixmultiply_mt = "0.2"
lazy_static = "1.4"
unchecked-index ="0.2"
num_cpus = "1.13"
threadpool = "1.8"
threadpool_scope = "0.1.0"
rand_pcg = "0.3"
libm = "0.2"

parking_lot = "0.12"

[profile.release]


[features]
cblas = ["alumina_ops/cblas"]

[dev-dependencies]
criterion = "0.3"
blis-src = "0.2"

[[bench]]
name = "elementwise"
harness = false


