[package]
name = "alumina_core"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
failure = "0.1"
indexmap = "1"
smallvec = "1.4"
ndarray = {version = "0.13", features = ["rayon"]}
rand = "0.7"
rand_distr = "0.3"
lru = "0.6"
itertools = "0.9"
sysinfo = "0.14"
parking_lot = "0.11"

# temp only
#lazy_static = "1.4"