[package]
name = "alumina_core"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
failure = "0.1"
indexmap = "1"
smallvec = "1.4"
ndarray = {version = "0.15", features = ["rayon"]}
rand = "0.8"
rand_distr = "0.4"
lru = "0.6"
itertools = "0.10"
sysinfo = "0.20"
parking_lot = "0.11"

# temp only
#lazy_static = "1.4"