[package]
name = "alumina_core"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2021"


[dependencies]
failure = "0.1"
indexmap = {version = "1", features = ["rayon", "serde-1"]}
smallvec = "1.4"
ndarray = { version = "0.15", features = ["rayon", "serde-1"] }
rand = "0.8"
rand_distr = "0.4"
lru = "0.8"
itertools = "0.10"
sysinfo = "0.26"
parking_lot = "0.12"
as-any="0.3"

# temp only
#lazy_static = "1.4"