[package]
name = "alumina_data"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
alumina_core = { path = "../alumina_core", version = "0.3" }

indexmap = "1"
ndarray = {version = "0.15", features = ["rayon"]}
rand = "0.8"
rand_pcg = "0.3"
smallvec = "1.3"
byteorder = "1.3"