[package]
name = "alumina_data"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
alumina_core = { path = "../alumina_core", version = "0.3" }

indexmap = {version = "1", features = ["rayon", "serde-1"]}
ndarray = { version = "0.15", features = ["rayon", "serde-1"] }
rand = "0.8"
rand_pcg = "0.3"
smallvec = "1.3"
byteorder = "1.3"