[package]
name = "alumina_ops"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
alumina_core = { path = "../alumina_core", version = "0.3" }


indexmap = "1"
itertools = "0.10"
ndarray = {version = "0.15", features = ["rayon"]}
matrixmultiply_mt = "0.1.7"
smallvec = "1.6"
rayon = "1.5"
unchecked-index = "0.2"
typenum = "1.13"
rustfft = "6.0"
#conv threadpool related
threadpool = "1.8"
threadpool_scope = "0.1"
lazy_static = "1.4"
num_cpus = "1.13"

[dev-dependencies]
alumina_test = { path = "../alumina_test", version = "0.3" }
rand = "0.8"
rand_distr = "0.4"