[package]
name = "alumina_opt"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2021"


[dependencies]
alumina_core = { path = "../alumina_core", version = "0.3"  }
alumina_ops = { path = "../alumina_ops", version = "0.3"  }
alumina_data = { path = "../alumina_data", version = "0.3"  }

ndarray = { version = "0.15", features = ["rayon", "serde-1"] }
indexmap = {version = "1", features = ["rayon", "serde-1"]}
rayon = "1.5"
unchecked-index = "0.2"

rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"