[package]
name = "alumina_test"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
alumina_core = { path = "../alumina_core" }
#alumina_exec = { path = "../alumina_exec" }

indexmap = "1"
ndarray = {version = "0.13", features = ["rayon"]}
rand = "0.7"
rand_distr = "0.2"

num-traits = "0.2"