[package]
name = "alumina_test"
version = "0.3.0"
authors = ["zza <millard.jn@gmail.com>"]
edition = "2018"


[dependencies]
alumina_core = { path = "../alumina_core", version = "0.3"  }
#alumina_exec = { path = "../alumina_exec", version = "0.3"  }

indexmap = "1"
ndarray = {version = "0.15", features = ["rayon"]}
rand = "0.8"
rand_distr = "0.4"

num-traits = "0.2"